--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+asgiref==3.7.2
 certifi==2024.7.4
 Django==5.0.7
 djangorestframework==3.15.2
 python-decouple==3.8
+gunicorn==20.1.0
+psycopg2==2.9.9
+supabase==2.5.3
+whitenoise==6.0.0
